<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">扫描易</string>
    <!--开始-->
    <string name="welcome">欢&#160;迎&#160;使&#160;用</string>
    <!--主菜单-->
    <string name="my_profile">我的资料</string>
    <string name="start_scan">开始扫描</string>
    <string name="start_batch_scan">开始批量扫描</string>
    <string name="history">历史记录</string>
    <!--资料页-->
    <string name="name">姓名</string>
    <string name="department">部门</string>
    <string name="employeeid">工号</string>
    <string name="edit">修改</string>
    <string name="submit">OK哒</string>
    <!--历史页-->
    <string name="add_file_name">新增文件说明</string>
    <string name="history_desc">或者使用下列说明</string>
    <string name="confirm">确认</string>
    <!--扫描页-->
    <string name="scaned_list">已扫入记录</string>
    <string name="upload">上传</string>
    <string name="export">导出</string>
    <!--异常处理-->
    <string name="insert_error">未成功录入，请再试一下下~</string>
    <string name="update_error">未成功更新，请再试一下下~</string>
    <string name="update_success">成功更新，请再点一下下退出~</string>
    <string name="scan_error">扫描出错</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_error">上传失败</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="please_enter">请输入</string>
    <string name="quit">退出</string>
</resources>