<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 android:layout_width="fill_parent"
			 android:layout_height="fill_parent">

	<SurfaceView
			android:id="@+id/preview_view"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="top"/>

	<!--<com.zxing.view.ViewfinderView-->
			<!--android:id="@+id/viewfinder_view"-->
			<!--android:layout_width="fill_parent"-->
			<!--android:layout_height="wrap_content">-->
	<!--</com.zxing.view.ViewfinderView>-->

	<LinearLayout
			android:id="@+id/showLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:background="@color/black"
			android:orientation="vertical"
			>

		<TextView
				android:text="@string/scaned_list"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/whiteText"/>

		<ListView
				android:id="@+id/scanedList"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
		</ListView>
	</LinearLayout>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:background="@color/black"
			android:padding="@dimen/activity_margin_half">

		<Button
				android:id="@+id/upload"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="@dimen/activity_button_height"
				android:layout_alignParentLeft="true"
				android:text="@string/upload"
				style="@style/whiteText"
				android:textStyle="bold"/>
		<Button
				android:id="@+id/export"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="@dimen/activity_button_height"
				android:layout_alignParentLeft="true"
				android:text="@string/export"
				style="@style/whiteText"
				android:textStyle="bold"/>
		<Button
				android:id="@+id/cancelScanButton"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="@dimen/activity_button_height"
				android:layout_alignParentRight="true"
				android:text="@string/quit"
				android:textStyle="bold"
				style="@style/whiteText"/>
	</LinearLayout>
</FrameLayout>


